compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__case_list_guard.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 370
expression: "case [1] { x if x == [1, 2.0] -> 1 _ -> 2 }"
snapshot_kind: text
---
----- SOURCE CODE
case [1] { x if x == [1, 2.0] -> 1 _ -> 2 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:26
  │
1 │ case [1] { x if x == [1, 2.0] -> 1 _ -> 2 }
  │                          ^^^

Expected type:

    Int

Found type:

    Float
