compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__case_operator_unify_situation.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 286
expression: "case 1, 2.0 { a, b -> a + b }"
snapshot_kind: text
---
----- SOURCE CODE
case 1, 2.0 { a, b -> a + b }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:27
  │
1 │ case 1, 2.0 { a, b -> a + b }
  │                           ^

The + operator expects arguments of this type:

    Int

But this argument has this type:

    Float

Hint: the +. operator can be used with Floats
