compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__const_annotation_wrong.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1420
expression: "pub const group_id: Int = \"42\""
snapshot_kind: text
---
----- SOURCE CODE
pub const group_id: Int = "42"

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:27
  │
1 │ pub const group_id: Int = "42"
  │                           ^^^^

Expected type:

    Int

Found type:

    String
