compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__const_heterogenus_list.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1516
expression: "const pair = [1, 1.0]"
snapshot_kind: text
---
----- SOURCE CODE
const pair = [1, 1.0]

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:18
  │
1 │ const pair = [1, 1.0]
  │                  ^^^

Expected type:

    Int

Found type:

    Float
